KSBWI-936 fixed bug appearing on IE11

--- a/src/IconHeader/IconHeader.scss
+++ b/src/IconHeader/IconHeader.scss
@@ -9,7 +9,7 @@
    border-bottom-width: 1px;
    font-size: 12px;
    line-height: 36px;
-   min-height: 64px;
+   height: 64px;
    overflow: hidden;
    position: relative;
 }
